@@ -18,6 +18,7 @@
 extern char *rrddir;
 extern char *trackmax;
 extern int use_rrd_cache;
+extern int ext_rrd_cache;
 extern int no_rrd;
 extern void setup_exthandler(char *handlerpath, char *ids);
 extern void update_rrd(char *hostname, char *testname, char *restofmsg, time_t tstamp, char *sender, xymonrrd_t *ldef, char *classname, char *pagepaths);
